--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,4 +1,16 @@
 {
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=827846
-  "recommendations": ["angular.ng-template"]
+  "recommendations": [
+    "visualstudioexptteam.vscodeintellicode",
+    "pkief.material-icon-theme",
+    "esbenp.prettier-vscode",
+    "ms-vscode.vscode-typescript-tslint-plugin",
+    "streetsidesoftware.code-spell-checker",
+    "eamodio.gitlens",
+    "rcore.rcore-unused-css-classes",
+    "johnpapa.angular2",
+    "Angular.ng-template",
+    "mike-co.import-sorter",
+    "alexiv.vscode-angular2-files"
+  ]
 }
